--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+dotenv = "0.15.0"
 reqwest = { version = "0.12.19", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
+thiserror = "2.0.12"
 # tokio = "1.45.1"
 tokio = { version = "1.45.1", features = ["full"] }
 url = "2.5.4"
