--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,8 @@ edition = "2024"
 base64 = "0.22.1"
 bytes = "1.10.1"
 dotenv = "0.15.0"
-# reqwest = { version = "0.12.20", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-thiserror = "2.0.12"
-# tokio = "1.45.1"
 tokio = { version = "1.45.1", features = ["full"] }
 url = "2.5.4"
 roboat = { git = "https://github.com/Flaried/roboat-extras.git", branch = "main" }
@@ -21,7 +18,6 @@ ustr = "1.1.0"
 rbx_types = "2.0.0"
 regex = "1.11.1"
 shellexpand = "3.1.1"
-futures = "0.3.31"
-env_logger = "0.11.8"
 log = "0.4.27"
+clap = "4.5.40"
 
