--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2024"
 [dependencies]
 base64 = "0.22.1"
 bytes = "1.10.1"
-dotenv = "0.15.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.45.1", features = ["full"] }
@@ -19,5 +18,5 @@ rbx_types = "2.0.0"
 regex = "1.11.1"
 shellexpand = "3.1.1"
 log = "0.4.27"
-clap = "4.5.40"
 
+clap = { version = "4.1.13", features = ["derive"] }
