--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.45.1", features = ["full"] }
 url = "2.5.4"
-roboat = { git = "https://github.com/Flaried/roboat-extras.git", branch = "main" }
 rbx_dom_weak = "3.0.0"
 rbx_binary = "1.0.0"
 ustr = "1.1.0"
@@ -22,3 +21,4 @@ log = "0.4.27"
 clap = { version = "4.1.13", features = ["derive"] }
 reqwest = "0.12.21"
 anyhow = "1.0.98"
+roboat = "0.36.0"
