--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ rbx_types = "2.0.0"
 regex = "1.11.1"
 shellexpand = "3.1.1"
 log = "0.4.27"
-
 clap = { version = "4.1.13", features = ["derive"] }
 reqwest = "0.12.21"
+roboat = { git = "https://github.com/Flaried/roboat-extras.git", branch = "main" }
+#roboat = "0.36.0"
 anyhow = "1.0.98"
-roboat = "0.36.0"
